# compchem-toolkit

./: .bandit  .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/actions/setup-environment/: action.yml
.github/workflows/: build-docs.yml  constraints.txt  dependabot-ci.yml  labeler.yml  release.yml  setup-environment.yml  setup_environment.yml  tests.yml  validate.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
docs/_source/: compchem_toolkit.rst  compchem_toolkit.utils.rst  modules.rst
docs/_templates/: module.rst
src/compchem_toolkit/: __init__.py  __main__.py
src/compchem_toolkit/utils/: __init__.py  logger.py  paths.py
tests/: test_logger.py  test_main.py  test_set_pathspec.py
