[tool.poetry]
name = "compchem-toolkit"
version = "0.1.0"
description = "CompChem Toolkit"
authors = ["Antonio M. Ferreira, Ph.D. <amferreira68@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ferreira68/compchem-toolkit"
repository = "https://github.com/ferreira68/compchem-toolkit"
documentation = "https://compchem-toolkit.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning"
]

[tool.poetry.urls]
Changelog = "https://github.com/ferreira68/compchem-toolkit/releases"

[tool.poetry.dependencies]
python = "^3.10"
# TODO: Remove click dependencies throughout
click = ">=8.0.1"
toml = "^0.10.2"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
docutils = ">=0.17.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-pyproject = "^1.2.3"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
mypy = "^1.11.2"
myst-parser = {version = ">=0.16.1"}
nox-poetry = ">=1.0.3"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pylint = "^3.2.7"
pytest = ">=6.2.5"
pytest-stub = "^1.1.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
sphinx-theme-pd = ">=0.8"
sphinx-autodoc-typehints = "^2.4.1"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}

[tool.poetry.scripts]
compchem-toolkit = "compchem_toolkit.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["compchem_toolkit", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
exclude = '^(tests/).*'
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[tool.pylint]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
